tz-local/resource/opentelemetry/opentelemetry-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
  name: opentelemetry-operator-webhook-service
  namespace: opentelemetry-operator
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
